<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="411dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="match_parent"
        tools:context=".ItemActivity">

    <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"/>
    <TextView
            android:text="@string/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/name" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:textSize="20sp"/>
    <TextView
            android:text="@string/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/phone_number"
            app:layout_constraintTop_toBottomOf="@+id/name" app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginTop="16dp" android:layout_marginStart="8dp" android:textSize="20sp"/>
    <TextView
            android:text="@string/gmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp" android:textSize="20sp"/>
    <TextView
            android:text="@string/Gmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/gmail"
            app:layout_constraintTop_toBottomOf="@+id/phone_number"
            app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginTop="16dp"
            android:layout_marginStart="8dp" android:textSize="20sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>